# irodori-TTS-Novel-character-pipeline

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: extraction-guidelines.md  profile-schema.md
scripts/: generate_voice_samples.py  validate_profiles.py
